need SECRET_KEY_BASE in production

--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,7 @@
 RAILS_ENV=production
 MONGOID_ENV=production
 MONGO_URL=mongodb://mongo:27017/togelack_production
+SECRET_KEY_BASE=
 SLACK_TOKEN=
 SLACK_CLIENT_ID=
 SLACK_CLIENT_SECRET=
