--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,10 @@ services:
       - 3031:3000
     depends_on:
       - mongo
+    restart: always
   mongo:
     image: mongo
+    restart: always
   redis:
     image: redis
+    restart: always
